--- a/index.html
+++ b/index.html
@@ -1,52 +1,243 @@
-<html><head>
-        <title>Router.ID URLS - BY BYET.TV</title>
-        <link rel="shortcut icon" href="/router-favicon.png">
-  </head>
-  <body>
-    <h1 class="message"><img src="/router-logo.png" height="150" width="500"></h1>
-      <div>
-          <input name="text" type="url" value="" id="linkinput" placeholder="Paste a URL to shorten">
-          <input type="submit" id="myinput" value="Shorten">
-      </div>
-      <p id="message"></p>
-      <h3>Powered By <a href="//byet.tv">Byet.tv</a><p>
- <script>
-document.getElementById("myinput").onclick = function() {
-  var link = document.getElementById("linkinput").value;
-  var data = {
-    "domain":"my.router.id",
-    "originalURL": link,
-    "allowDuplicates":false }; 
- fetch('https://api.short.cm/links/public', {
-    method: 'post',
-    headers: {
-      'accept': 'application/json',
-      'Content-Type': 'application/json',
-      'authorization': 'pk_cHkgeZ4DVnS5CqzQ'
-    },
-    body: JSON.stringify(data)
-  }) .then(function(response) {
-        return response.json();
-    }) 
-    .then(function(data){ 
-    document.getElementById("message").innerHTML = "Your short link is " + data.shortURL })
-    document.getElementById("linkinput").value='';
- }
-    </script>
-  
+<!DOCTYPE html>
+<html>
+<head>
+<title>KJ RADIO>/title>
+<style>
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-</p></h3>
-</body><style class="stylish-style" data-style-id="168153" data-stylish="168153" id="stylish-style-168153">/*
-    
-    Theme Name: Netflix Recolor Plus
+body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #5f7a61;
+    font-family: 'roboto', sans-serif;
+}
 
-    Creator: Adam-J-Frost.
+.music-player{
+    width: 400px;
+    height: 220px;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.08);
+    box-shadow: 0 40px 100px rgba(255, 255, 255, 0.1);
+    padding: 30px;
+    overflow: hidden;
+    color: #d5eebb;
+}
+.music-name,
+.artist-name{
+    text-align: center;
+    text-transform: capitalize;
+}
 
-    Updated: 2020/04/13
+.music-name{
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
 
-    Created: 2019/01/24
-    
-    Description: Change the colors of Netflix and add more if you like!
+.artist-name{
+    font-size: 20px;
+}
+.disk{
+    position: relative;
+    display: block;
+    margin: 40px auto;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    background-image: url('https://images.radio.co/station_logos/sf5abf911c.20230305122923.png');
+    background-size: cover;
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.08);
+}
+.disk::before{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #5f7a61;
+}
+.song-slider{
+    width: 100%;
+    position: relative;
+}
 
-*/
-@namespace url(http://www.w3.org/1999/xhtml);</style></html>
+.seek-bar{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    border-radius: 10px;
+    background: #7fc8a9;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.seek-bar::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    width: 1px;
+    height: 20px;
+    box-shadow: -400px 0 0 400px #d5eebb;
+}
+.current-time,
+.song-duration{
+    font-size: 14px;
+}
+
+.song-duration{
+    position: absolute;
+    right: 0;
+}
+.controls{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.play-btn{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #d5eebb;
+    cursor: pointer;
+    border: none;
+}
+
+.play-btn span{
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translateY(-50%);
+    width: 10px;
+    height: 30px;
+    border-radius: 2px;
+    background: #5f7a61;
+    transition: .5s;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.play-btn span:nth-child(2){
+    left: 55%;
+    transform-origin: center;
+}
+.play-btn.pause span:nth-child(2){
+    transform: translateY(-50%) scaleY(0);
+}
+
+.play-btn.pause span:nth-child(1){
+    width: 35%;
+    left: 53%;
+    transform: translate(-50%, -50%);
+    border-radius: 0;
+    clip-path: polygon(0 0, 100% 50%, 100% 50%, 0% 100%);
+}
+.play-btn.pause{
+    animation: pulse 2s linear infinite;
+}
+
+@keyframes pulse{
+    0%{
+        box-shadow: 0;
+    }
+    50%{
+        box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.1);
+    }
+    100%{
+        box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.4);
+    }
+}
+btn{
+    width: 40px;
+    height: 40px;
+    background: #d5eebb;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    cursor: pointer;
+}
+@keyframes rotate{
+    0%{
+        transform: rotate(0);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+disk{
+    // previous styles
+    animation: rotate 20s linear infinite;
+    animation-play-state: paused;
+}
+
+.disk.play{
+    animation-play-state: running;
+}
+
+</style>
+</head>
+<body>
+<div class="music-player">
+<h1 class="music-name">KJ RADIO</h1>
+<script>
+(function(){
+    'use strict';
+        var player = {"id":"3698384","name":"Default Player","type":"classic","size":"medium","stream":{"station ":"sf5abf911c","output":null,"streaming_url":"https:\/\/s4.radio.co\/sf5abf911c"},"theme":{"width":400,"background_colour":"#5f7a61","text_colour":"#fff","accent_colour":"#fff","rounded_corners":true,"track_information":true},"settings":{"autoplay":false,"artwork":true,"spotify":false,"popout":true},"embed_url":"https:\/\/embed.radio.co\/player\/3698384.html","social":{"twitter":false,"facebook_share":false,"embed":false,"template":""}};
+        var i = document.createElement('iframe');
+
+    var style = "border: none;overflow:hidden;";
+    var width = player.theme.width;
+
+    i.src = player.embed_url;
+    i.width = '100%';
+    i.allow = 'autoplay';
+
+    if (player.size !== 'small') {
+        style += 'max-width:' + width + 'px;margin:0 auto;';
+    }
+
+    i.setAttribute('scrolling', 'no');
+    i.setAttribute('style', style);
+
+    var s = document.getElementsByTagName('script');
+    s = s[s.length-1];
+
+    if(s.parentNode.nodeName === 'HEAD'){
+        window.onload = function() { document.body.appendChild(i); };
+    }else{
+        s.parentNode.insertBefore(i, s);
+    }
+
+    window.addEventListener('message', function(e) {
+        var eventName = e.data[0];
+        var data = e.data[1];
+        if(eventName === player.id+'.setHeight') {
+            i.style.height = data+'px';
+        }
+    }, false);
+
+    i.addEventListener('load', function(){
+        var targetUrl = player.embed_url.split('/').splice(0,3).join('/'); // strips everything after hostname
+        setTimeout(function() {
+            i.contentWindow.postMessage(JSON.stringify(['parent', location]), targetUrl);
+        }, 1000); // Prevent the iframe not being ready for messages.
+    });
+}());
+</script>
+</div>
+</body>
+</html>
+
