--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ disk{
 </div>
     <br>
 <div class="music-player">
-<h1 class="music-name">REQUEST SONGS</h1>
+<h1 class="music-name">REQ SONGS</h1>
 <script>
     (function() {
     'use strict';
