--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@ body{
     overflow: hidden;
     color: #d5eebb;
 }
+.music-playerr{
+    width: 400px;
+    height: 250px;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.08);
+    box-shadow: 0 40px 100px rgba(255, 255, 255, 0.1);
+    padding: 30px;
+    overflow: hidden;
+    color: #d5eebb;
+}
 .music-name,
 .artist-name{
     text-align: center;
@@ -239,7 +249,7 @@ disk{
 </script>
 </div>
     <br>
-<div class="music-player">
+<div class="music-playerr">
 <h1 class="music-name">REQ SONGS</h1>
 <script>
     (function() {
