--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>KJ RADIO</title>
+<title>Starship Radio</title>
 <style>
 *{
     margin: 0;
@@ -201,7 +201,7 @@ disk{
 </head>
 <body>
 <div class="music-player">
-<h1 class="music-name">KJ RADIO</h1>
+<h1 class="music-name">STARSHIP RADIO</h1>
 <script>
 (function(){
     'use strict';
